1. make classes and use oops
2. limits of out of screen
3. make screen small not full size